<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rv_card_item">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left"
            android:elevation="0dp"
            android:background="@drawable/card_item_style"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recibo"
                android:fontFamily="@font/dosis_bold"
                android:textSize="27dp"
                android:textColor="@color/deep_blue"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/layout_inner_margins_small"
                android:layout_marginBottom="20dp">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/receiptsShowName"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:textColor="@color/deep_blue"
                    android:maxLines="2"
                    android:ellipsize="end">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/receiptsData"
                    android:textAlignment="textStart"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="@color/deep_blue"
                    android:maxLines="2"
                    android:ellipsize="end">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp">
                <TextView
                    android:id="@+id/receipts_show_name"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Show 1"
                    android:textSize="20dp"
                    android:fontFamily="@font/dosis_semibold"
                    android:textAlignment="textStart"
                    android:textColor="@color/deep_blue"
                    android:maxLines="2"
                    android:ellipsize="end">
                </TextView>
                <TextView
                    android:id="@+id/receiptsDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2022-04-17"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/dosis_semibold"
                    android:textSize="20dp"
                    android:textColor="@color/deep_blue"
                    android:maxLines="2"
                    android:ellipsize="end">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/receiptsNif"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:textColor="@color/deep_blue"
                    android:maxLines="2"
                    android:ellipsize="end">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/receiptsValuePaid"
                    android:textAlignment="textStart"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="@color/deep_blue"
                    android:maxLines="2"
                    android:ellipsize="end">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp">
                <TextView
                    android:id="@+id/receipts_nif"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="2357539"
                    android:textSize="20dp"
                    android:fontFamily="@font/dosis_semibold"
                    android:textAlignment="textStart"
                    android:textColor="@color/deep_blue"
                    android:maxLines="2"
                    android:ellipsize="end">
                </TextView>
                <TextView
                    android:id="@+id/paid_value_receipts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="20"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/dosis_semibold"
                    android:textSize="20dp"
                    android:textColor="@color/deep_blue"
                    android:maxLines="2"
                    android:ellipsize="end">
                </TextView>
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>